--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://github.com/RedKamo/edupage/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/edupage/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
-    <script type="module" crossorigin src="https://github.com/RedKamo/edupage/assets/index.2e7cfd5c.js"></script>
-    <link rel="stylesheet" href="https://github.com/RedKamo/edupage/assets/index.420862b0.css">
+    <script type="module" crossorigin src="/edupage/assets/index.2e7cfd5c.js"></script>
+    <link rel="stylesheet" href="/edupage/assets/index.36ada9ad.css">
   </head>
   <body>
     <div id="root"></div>
